--- a/assets/styling/navbar.css
+++ b/assets/styling/navbar.css
@@ -1,16 +1,27 @@
 #navbar {
-  display: flex;
-  flex-direction: row;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    background-color: #000;
+    z-index: 1000;
+    margin-top: 1%;
+    margin-left: 1%;
+}
+
+body {
+    margin-top: 50px; /* Adjust based on navbar height */
 }
 
 #navbar a {
-  color: #ffffff;
-  margin-right: 20px;
-  text-decoration: none;
-  transition: color 0.2s ease;
+    color: #ffffff;
+    margin-right: 20px;
+    text-decoration: none;
+    transition: color 0.2s ease;
 }
 
 #navbar a:hover {
-  cursor: pointer;
-  color: #91a4d2;
+    cursor: pointer;
+    color: #91a4d2;
 }
