--- a/assets/styling/credit_card.css
+++ b/assets/styling/credit_card.css
@@ -65,3 +65,24 @@ body {
     font-weight: bold;
     text-align: right;
 }
+
+.credit-card #credit_card_input {
+    background: transparent;
+    border: none;
+    color: white;
+}
+::placeholder {
+    color: white;
+}
+.credit-card #submit_button{
+
+      background-color: #04AA6D; /* Green */
+      border: none;
+      color: white;
+      padding: 15px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+    }
+}
