--- a/assets/styling/credit_card.css
+++ b/assets/styling/credit_card.css
@@ -71,18 +71,10 @@ body {
     border: none;
     color: white;
 }
-::placeholder {
-    color: white;
-}
-.credit-card #submit_button{
 
-      background-color: #04AA6D; /* Green */
-      border: none;
-      color: white;
-      padding: 15px 32px;
-      text-align: center;
-      text-decoration: none;
-      display: inline-block;
-      font-size: 16px;
-    }
+.credit-card #pay_button {
+    background: transparent;
+    border: none;
+    font-size: 100%;
+    font-weight: 600;
 }
